--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Julian Bammer"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Utrecht School of Economics Graduate working on building more technical skills related to Business Intelligence and Data Analytics"
+  bio              : "Aspiring Data Analyst"
   location         : "Amsterdam, Netherlands"
   email            :
   links:
