--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Julian Bammer"
 description              : "An amazing website (Data analytics portfolio in the works)."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : "https://j-bammer.github.io/"
+baseurl                  : "/j-bammer"
+repository               : "j-bammer/j-bammer"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -280,7 +280,8 @@ defaults:
       author_profile: true
       read_time: true
       comments: # true
-      share: true
+      share: # true
+      show_date: true
       related: true
 
   # _pages
